Bug 1725973 Part 1 - Add a FLEX_LOG in MoveFlexItemToFinalPosition(). r=dholbert

Make it easier to spot a flex item is being moved to the final position
rather than going through the final reflow.

Differential Revision: https://phabricator.services.mozilla.com/D123702